src/styles/base/components/modal.scss
@use "../../mixins";

.jk-modal-container {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: var(--z-index-overlay);
  display: grid;
  place-items: center;
  overflow: auto;
  
  .jk-modal-overlay {
    overflow: hidden;
    z-index: 1;
  }
  
  &.expand {
    .jk-modal-content {
      width: var(--modal-width-lg);
    }
  }
  
  .jk-modal-content {
    margin: var(--pad-md);
    background-color: var(--t-color-background);
    z-index: 1;
    position: relative;
    max-width: var(--modal-width-lg);
    min-width: var(--modal-width-sm);
    
    .jk-modal-close-button {
      z-index: 2;
      position: absolute;
      top: 0;
      right: 0;
      margin: var(--border-radius);
    }
  }
}

.jk-modal-height-expanded {
  .jk-modal-body {
    height: calc(var(--100VH) - var(--pad-md) - var(--pad-md));
  }
}

.jk-modal-bc-wd-TODO {
  .jk-modal {
    background: var(--t-color-white-dark);
  }
}

.split-modal {
  .jk-side-secondary {
    background-color: var(--t-color-accent);
    border-bottom-right-radius: 0;
    border-top-right-radius: 0;
    height: calc(var(--side-main-height, 100%) + var(--pad-lg) * 2);
    max-height: calc(var(--side-main-height, 100%) + var(--pad-lg) * 2);
    
    @include mixins.transition(background-color);
    @include mixins.md { flex: 5 !important; }
    
    .title {
      padding: var(--pad-sm) 0 0 0;
      text-align: center;
    }
    
    .graphic {
      max-height: calc(100% - var(--title-side-main-height) - var(--pad-sm) * 3);
      padding: var(--pad-sm);
    }
  }
  
  .jk-side-main {
    @include mixins.md { flex: 6 !important; }
  }
  
  @include mixins.sm {
    flex-direction: column;
    .jk-side-secondary {
      //border-radius: var(--border-radius) var(--border-radius) 0 0;
      border-radius: 0;
    }
  }
}

.modal-info-markdown, .modal-alert, .modal-upload-image {
  .jk-modal-body {
    padding: var(--pad-l);
  }
}

.modal-login, .modal-sign-up {
  .forgot-password-label {
    @include mixins.transition(font-weight);
  }
}

.change-password-modal {
  @include mixins.md-hg {
    width: 340px;
  }
}

